// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flex renders 0 1`] = `
Array [
  .c0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`flex renders function 1`] = `
Array [
  .c0 {
  -webkit-flex: hasnot;
  -ms-flex: hasnot;
  flex: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: has;
  -ms-flex: has;
  flex: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: hasnot;
  -ms-flex: hasnot;
  flex: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: has;
  -ms-flex: has;
  flex: has;
}

<div
    className="c0"
  />,
]
`;

exports[`flex renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-flex: invalid.path.1;
  -ms-flex: invalid.path.1;
  flex: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: invalid.path.1;
  -ms-flex: invalid.path.1;
  flex: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: invalid.path.1;
  -ms-flex: invalid.path.1;
  flex: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: invalid.path.1;
  -ms-flex: invalid.path.1;
  flex: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`flex renders negative number 1`] = `
Array [
  .c0 {
  -webkit-flex: -54881;
  -ms-flex: -54881;
  flex: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: -54881;
  -ms-flex: -54881;
  flex: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: -42365;
  -ms-flex: -42365;
  flex: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: -42365;
  -ms-flex: -42365;
  flex: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`flex renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-flex: July;
    -ms-flex: July;
    flex: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex: August;
    -ms-flex: August;
    flex: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex: September;
    -ms-flex: September;
    flex: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex: November;
    -ms-flex: November;
    flex: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-flex: July;
    -ms-flex: July;
    flex: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex: August;
    -ms-flex: August;
    flex: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex: September;
    -ms-flex: September;
    flex: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex: November;
    -ms-flex: November;
    flex: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex: May;
    -ms-flex: May;
    flex: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex: June;
    -ms-flex: June;
    flex: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex: April;
    -ms-flex: April;
    flex: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex: November;
    -ms-flex: November;
    flex: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex: May;
    -ms-flex: May;
    flex: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex: June;
    -ms-flex: June;
    flex: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex: April;
    -ms-flex: April;
    flex: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex: November;
    -ms-flex: November;
    flex: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flex renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-flex: July;
    -ms-flex: July;
    flex: July;
  }
}

@media April {
  .c0 {
    -webkit-flex: August;
    -ms-flex: August;
    flex: August;
  }
}

@media January {
  .c0 {
    -webkit-flex: September;
    -ms-flex: September;
    flex: September;
  }
}

@media April {
  .c0 {
    -webkit-flex: November;
    -ms-flex: November;
    flex: November;
  }
}

@media June {
  .c0 {
    -webkit-flex: August;
    -ms-flex: August;
    flex: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-flex: July;
    -ms-flex: July;
    flex: July;
  }
}

@media April {
  .c0 {
    -webkit-flex: August;
    -ms-flex: August;
    flex: August;
  }
}

@media January {
  .c0 {
    -webkit-flex: September;
    -ms-flex: September;
    flex: September;
  }
}

@media April {
  .c0 {
    -webkit-flex: November;
    -ms-flex: November;
    flex: November;
  }
}

@media June {
  .c0 {
    -webkit-flex: August;
    -ms-flex: August;
    flex: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex: January;
    -ms-flex: January;
    flex: January;
  }
}

@media April {
  .c0 {
    -webkit-flex: December;
    -ms-flex: December;
    flex: December;
  }
}

@media January {
  .c0 {
    -webkit-flex: April;
    -ms-flex: April;
    flex: April;
  }
}

@media April {
  .c0 {
    -webkit-flex: May;
    -ms-flex: May;
    flex: May;
  }
}

@media June {
  .c0 {
    -webkit-flex: June;
    -ms-flex: June;
    flex: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex: January;
    -ms-flex: January;
    flex: January;
  }
}

@media April {
  .c0 {
    -webkit-flex: December;
    -ms-flex: December;
    flex: December;
  }
}

@media January {
  .c0 {
    -webkit-flex: April;
    -ms-flex: April;
    flex: April;
  }
}

@media April {
  .c0 {
    -webkit-flex: May;
    -ms-flex: May;
    flex: May;
  }
}

@media June {
  .c0 {
    -webkit-flex: June;
    -ms-flex: June;
    flex: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flex renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-flex: 54881;
  -ms-flex: 54881;
  flex: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: 54881;
  -ms-flex: 54881;
  flex: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: 42365;
  -ms-flex: 42365;
  flex: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: 42365;
  -ms-flex: 42365;
  flex: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`flex renders string 1`] = `
Array [
  .c0 {
  -webkit-flex: July;
  -ms-flex: July;
  flex: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: July;
  -ms-flex: July;
  flex: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: June;
  -ms-flex: June;
  flex: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: June;
  -ms-flex: June;
  flex: June;
}

<div
    className="c0"
  />,
]
`;

exports[`flex renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-flex: DarkSlateBlue;
  -ms-flex: DarkSlateBlue;
  flex: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: DarkSlateBlue;
  -ms-flex: DarkSlateBlue;
  flex: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: DarkSlateBlue;
  -ms-flex: DarkSlateBlue;
  flex: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex: DarkSlateBlue;
  -ms-flex: DarkSlateBlue;
  flex: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
